--- a/auth-service.properties
+++ b/auth-service.properties
@@ -12,3 +12,5 @@ spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:
 spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/v2/auth
 spring.security.oauth2.client.provider.google.token-uri=https://www.googleapis.com/oauth2/v4/token
 spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+
