--- a/book-service.properties
+++ b/book-service.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://my-postgresql:5432/ipp6
+spring.datasource.url=jdbc:postgresql://my-postgresql-0:5432/ipp6
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
