--- a/order-service.properties
+++ b/order-service.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/rksp8_order
+spring.datasource.url=jdbc:postgresql://psql-order-postgresql:5432/rksp8-order
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
