--- a/auth-service.properties
+++ b/auth-service.properties
@@ -7,7 +7,7 @@ host-client=http://localhost:8080
 # google
 
 spring.security.oauth2.client.registration.google.scope=openid,email,profile
-spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8081/login/oauth2/code/google
+spring.security.oauth2.client.registration.google.redirect-uri=http://192.168.105.3:31250/login/oauth2/code/google
 
 spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/v2/auth
 spring.security.oauth2.client.provider.google.token-uri=https://www.googleapis.com/oauth2/v4/token
