--- a/auth-service.properties
+++ b/auth-service.properties
@@ -15,6 +15,6 @@ spring.security.oauth2.client.provider.google.authorization-uri=https://accounts
 spring.security.oauth2.client.provider.google.token-uri=https://www.googleapis.com/oauth2/v4/token
 spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
 eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
-eureka.instance.hostname=auth-service.default.svc.cluster.local
+eureka.instance.hostname=auth-server.default.svc.cluster.local
 eureka.instance.prefer-ip-address=false
 eureka.instance.instance-id=${spring.application.name}:${server.port}
