--- a/auth-service.properties
+++ b/auth-service.properties
@@ -17,4 +17,4 @@ spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleap
 eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
 eureka.instance.hostname=auth-server.default.svc.cluster.local
 eureka.instance.prefer-ip-address=false
-eureka.instance.instance-id=${spring.application.name}:${server.port}
+eureka.instance.instance-id=${eureka.instance.hostname}:${server.port}
