--- a/book-service.properties
+++ b/book-service.properties
@@ -12,4 +12,9 @@ application.security.jwt.token=eyJhbGciOiJIUzI1NiJ9.eyJzdWIiOiJlbWFpbCIsInJvbGUi
 
 eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
 
+eureka.instance.hostname=book-server.default.svc.cluster.local
+eureka.instance.prefer-ip-address=false
+eureka.instance.instance-id=${eureka.instance.hostname}:${server.port}
+
+
 
