--- a/auth-service.properties
+++ b/auth-service.properties
@@ -9,7 +9,7 @@ redis-hostname=my-redis-master
 # google
 
 spring.security.oauth2.client.registration.google.scope=openid,email,profile
-spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:9000/login/oauth2/code/google
+spring.security.oauth2.client.registration.google.redirect-uri=http://localhost/login/oauth2/code/google
 
 spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/v2/auth
 spring.security.oauth2.client.provider.google.token-uri=https://www.googleapis.com/oauth2/v4/token
