--- a/auth-service.properties
+++ b/auth-service.properties
@@ -20,3 +20,5 @@ eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
 eureka.instance.hostname=auth-server.default.svc.cluster.local
 eureka.instance.prefer-ip-address=false
 eureka.instance.instance-id=${eureka.instance.hostname}:${server.port}
+logging.level.org.springframework.security=DEBUG
+
