--- a/auth-service.properties
+++ b/auth-service.properties
@@ -21,4 +21,7 @@ eureka.instance.hostname=auth-server.default.svc.cluster.local
 eureka.instance.prefer-ip-address=false
 eureka.instance.instance-id=${eureka.instance.hostname}:${server.port}
 logging.level.org.springframework.security=DEBUG
+graylog.host=192.168.105.5
+graylog.port=31201
+graylog.facility=graylog
 
