--- a/auth-service.properties
+++ b/auth-service.properties
@@ -24,4 +24,7 @@ logging.level.org.springframework.security=DEBUG
 graylog.host=192.168.105.5
 graylog.port=31201
 graylog.facility=graylog
+otel.traces.exporter=jaeger
+otel.exporter.jaeger.endpoint=http://jaeger:14250
+otel.service.name=auth
 
