--- a/auth-service.properties
+++ b/auth-service.properties
@@ -24,7 +24,6 @@ logging.level.org.springframework.security=DEBUG
 graylog.host=graylog
 graylog.port=12201
 graylog.facility=graylog
-otel.traces.exporter=jaeger
-otel.exporter.jaeger.endpoint=http://jaeger:14250
-otel.service.name=auth
+opentracing.jaeger.http-sender.url=http://jager:14268/api/traces
+opentracing.jaeger.log-spans=true
 
