--- a/auth-service.properties
+++ b/auth-service.properties
@@ -20,7 +20,7 @@ eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka/
 eureka.instance.hostname=auth-server.default.svc.cluster.local
 eureka.instance.prefer-ip-address=false
 eureka.instance.instance-id=${eureka.instance.hostname}:${server.port}
-logging.level.org.springframework.security=DEBUG
+# logging.level.org.springframework.security=DEBUG
 
 opentracing.jaeger.http-sender.url=http://jager:14268/api/traces
 opentracing.jaeger.log-spans=true
