--- a/auth-service.properties
+++ b/auth-service.properties
@@ -24,4 +24,6 @@ eureka.instance.instance-id=${eureka.instance.hostname}:${server.port}
 
 opentracing.jaeger.http-sender.url=http://jager:14268/api/traces
 opentracing.jaeger.log-spans=true
+logging.level.de.siegmar.logbackgelf.GelfUdpAppender=OFF
+logging.level.your.graylog.package=OFF
 
