--- a/auth-service.properties
+++ b/auth-service.properties
@@ -26,4 +26,5 @@ opentracing.jaeger.http-sender.url=http://jager:14268/api/traces
 opentracing.jaeger.log-spans=true
 logging.level.de.siegmar.logbackgelf.GelfUdpAppender=OFF
 logging.level.your.graylog.package=OFF
+logging.config=classpath:logback-no-graylog.xml
 
