--- a/auth-service.properties
+++ b/auth-service.properties
@@ -22,7 +22,7 @@ eureka.instance.prefer-ip-address=false
 eureka.instance.instance-id=${eureka.instance.hostname}:${server.port}
 # logging.level.org.springframework.security=DEBUG
 
-opentracing.jaeger.http-sender.url=http://jager:14268/api/traces
+opentracing.jaeger.http-sender.url=http://jaeger-collector:14268/api/traces
 opentracing.jaeger.log-spans=true
 
 
