--- a/auth-service.properties
+++ b/auth-service.properties
@@ -22,7 +22,8 @@ eureka.instance.prefer-ip-address=false
 eureka.instance.instance-id=${eureka.instance.hostname}:${server.port}
 # logging.level.org.springframework.security=DEBUG
 
-opentracing.jaeger.http-sender.url=http://jaeger-collector:14250/api/traces
+opentracing.jaeger.udp-sender.host=jaeger-agent
+opentracing.jaeger.udp-sender.port=6831
 opentracing.jaeger.log-spans=true
 
 
